# pocky

./: Cargo.toml  README.md  gleam.tmLanguage.json  package-lock.json  package.json
.github/workflows/: release.yml
posts/: test.md
src/: de.rs  lib.rs  md.rs  shiki.js  shiki.rs
src/page/: md.rs  mod.rs  text.rs
tests/: main.rs
tests/testdata/: sample.html  sample.md
