[package]
name = "pocky"
version = "0.1.1"
authors = ["McKayla Washburn <mckayla@hey.com>"]
description = "A framework for building your own static site generator"
keywords = ["web", "markdown", "static", "site"]
license = "MIT"
homepage = "https://github.com/aslilac/pocky"
repository = "https://github.com/aslilac/pocky"
documentation = "https://docs.rs/pocky"
edition = "2021"

[dependencies]
chrono = "0.4.22"
pulldown-cmark = "0.9.2"
