[package]
name = "pocky"
version = "0.5.2"
authors = ["McKayla Washburn <mckayla@hey.com>"]
description = "A framework for building your own static site generator"
keywords = ["web", "markdown", "static", "site"]
license = "MIT"
homepage = "https://github.com/aslilac/pocky"
repository = "https://github.com/aslilac/pocky"
documentation = "https://docs.rs/pocky"
edition = "2021"

[dependencies]
pulldown-cmark = "0.9.3"
serde = { version = "=1.0.171", features = ["derive"] }
serde_yaml = "0.9.22"
